cmake_minimum_required(VERSION 3.4...3.21)
project(venus LANGUAGES CXX)
enable_testing()
file(GLOB TEST_SRCS ./*.cpp)
add_executable(venustest ${TEST_SRCS})
find_package(glog CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
target_link_libraries(venustest PRIVATE analytic_pricer glog::glog GTest::gtest GTest::gtest_main pthread)
add_test(venustest venustest)